--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-/web/packages
-/test/packages
-
-
-// Don’t commit the following files and directories created by pub, Dart Editor, and dart2js
-packages/*
-*/packages/*
-build/*
-.project
+﻿# Don’t commit the following directories created by pub.
 .buildlog
+.pub/
+build/
+packages
+
+# Or the files created by dart2js.
+*.dart.js
 *.js_
 *.js.deps
 *.js.map
 
-// Include when developing application packages
-pubspec.lock 
-
-// Avoid committing generated JavaScript files
-*.dart.js
-*.log
+# Include when developing application packages.
+pubspec.lock
+logging
+bin/logging
